# veriswarm-sdk

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  ci-instructions.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish-mcp.yml  publish-node.yml  publish-openclaw.yml  publish-python.yml  publish-schemas.yml
cli/: setup.py
cli/src/veriswarm_cli/: __init__.py  client.py  main.py
github-action/: README.md  action.yml  check.py  test_check.py
github-action/tests/: test_check.py  test_check_ci_exfil.py
mcp-server/: README.md  pyproject.toml  server.json
mcp-server/src/: __main__.py  client.py  server.py
mcp-server/src/hooks/: activity_logger.sh  activity_reporter.py
mcp-server/src/tools/: __init__.py  agents.py  compliance_and_sre.py  events.py  evidence.py  guard.py  passport.py  platform.py  runtime.py  trust.py  vault.py  workflows.py
mcp-server/tests/: test_a2a_invoke.py  test_guard_hook_fail_closed.py  test_secret_tripwire.py  test_tools.py
mcp-server/veriswarm_mcp/: __init__.py  client.py  secret_tripwire.py  server.py  setup.py
mcp-server/veriswarm_mcp/hooks/: __init__.py  activity_reporter.py  guard_hook.py
mcp-server/veriswarm_mcp/tools/: __init__.py  _shared.py  a2a.py  agents.py  approvals.py  compliance_and_sre.py  guard.py  passport.py  platform.py  trust.py  vault.py  workflows.py
node/: README.md  package-lock.json  package.json  secret_tripwire.mjs  veriswarm-sdk-0.1.0.tgz  veriswarm_client.mjs
node/test/: client.test.js  secret_tripwire.test.mjs
openclaw-plugin/: README.md  SKILL.md  package-lock.json  package.json  tsconfig.json
openclaw-plugin/src/: client.ts  index.ts  secret_tripwire.ts
openclaw-plugin/test/: secret_tripwire.test.ts  secret_tripwire_hook.test.ts  secret_tripwire_wiring.test.ts  session_sentry.test.ts
python/: LICENSE  README.md  pyproject.toml  veriswarm_client.py
python/adapters/: langchain.py
python/src/veriswarm/: __init__.py  client.py  secret_rules_manifest.json  secret_tripwire.py
python/src/veriswarm/adapters/: __init__.py  claude_sdk.py  crewai.py  decorator.py  guard_mixin.py  langchain.py  openai_agents.py
python/tests/: test_langchain_adapter.py  test_scan_session_turn.py  test_secret_tripwire.py  test_secret_tripwire_wiring.py
python/veriswarm.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
schemas/: README.md  agent_event.schema.json  agent_profile.schema.json  package.json  score_snapshot.schema.json  workflow-schema.json
scripts/: check_secret_manifest.mjs  secret_rules_manifest.canonical.json  sync_secret_manifest.mjs
