[project]
name = "veriswarm-mcp"
version = "0.3.1"
description = "VeriSwarm MCP Server — Trust infrastructure for AI agents via Model Context Protocol"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "VeriSwarm", email = "hello@veriswarm.ai"}
]
keywords = ["veriswarm", "mcp", "ai", "trust", "agent", "moderation", "security", "scoring"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Topic :: Software Development :: Libraries",
    "Topic :: Security",
]
dependencies = [
    "mcp>=1.0",
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://veriswarm.ai"
Repository = "https://github.com/veriswarm/veriswarm-sdk"
Documentation = "https://veriswarm.ai/docs"
Issues = "https://github.com/veriswarm/veriswarm-sdk/issues"

[project.scripts]
veriswarm-mcp = "veriswarm_mcp.server:main"
veriswarm-setup = "veriswarm_mcp.setup:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["veriswarm_mcp*"]

[tool.setuptools.package-data]
veriswarm_mcp = ["secret_rules_manifest.json"]
